Map parameter into JobMap. Cleanup code.